# prpl-mono

./: .gitignore
.github/workflows/: ci.yml
prbench/: pyproject.toml
prbench-imitation-learning/: README  prpl_requirements.txt  pyproject.toml
prbench-models/: pyproject.toml
prbench-rl/: LICENSE  README.md  prpl_requirements.txt  pyproject.toml  run_autoformat.sh
prbench-vlm-planning/: prpl_requirements.txt  pyproject.toml
prbench/demos/DynPushPullHook2D-o5/2/: 1759592381.p
prbench/demos/DynPushT-t1/0/: 1759591501.p
prbench/docs/envs/: ClutteredRetrieval2D-o1.md  ClutteredRetrieval2D-o10.md  ClutteredRetrieval2D-o25.md  DynObstruction2D-o0.md  DynObstruction2D-o1.md  DynObstruction2D-o2.md  DynObstruction2D-o3.md  DynPushT-t1.md  Packing3D-p1.md  Packing3D-p2.md  Packing3D-p3.md  RBY1A3D-cupboard-o8.md  TidyBot3D-base_motion-o1.md  TidyBot3D-cupboard-o1-real.md  TidyBot3D-cupboard-o1.md  TidyBot3D-cupboard-o8-real.md  TidyBot3D-cupboard-o8.md  TidyBot3D-ground-o1.md  TidyBot3D-ground-o3.md  TidyBot3D-ground-o5.md  TidyBot3D-ground-o7.md  TidyBot3D-table-o20-SortClutteredBlocks.md  TidyBot3D-table-o3.md  TidyBot3D-table-o5.md  TidyBot3D-table-o7.md
prbench/scripts/: generate_env_docs.py
prbench/src/prbench/: __init__.py
prbench/src/prbench/envs/: utils.py
prbench/src/prbench/envs/dynamic2d/: base_env.py  dyn_obstruction2d.py  dyn_pushpullhook2d.py  dyn_pushtee.py  object_types.py  utils.py
prbench/src/prbench/envs/dynamic3d/: base_env.py  mujoco_utils.py  object_types.py  objects.py  placement_samplers.py  tidybot3d.py  tidybot_rewards.py  tidybot_robot_env.py  utils.py
prbench/src/prbench/envs/dynamic3d/models/rby1a/: rby1a_model_v1.2.xml
prbench/src/prbench/envs/dynamic3d/models/stanford_tidybot/: ground_scene.xml  tidybot.xml
prbench/src/prbench/envs/dynamic3d/renderers/context/: egl_context.py  osmesa_context.py
prbench/src/prbench/envs/dynamic3d/robots/: __init__.py  base.py  rby1a_robot_env.py  tidybot_robot_env.py
prbench/src/prbench/envs/dynamic3d/tasks/: base_motion-o1.json  ground-o1.json  ground-o5.json  rby1a-cupboard-o8.json  table-o7.json  tidybot-cupboard-o1-real.json  tidybot-cupboard-o8-real.json  tidybot-cupboard-o8.json  tidybot-cupboard_real-o2.json  tidybot-cupboard_real-o4.json  tidybot-cupboard_real-o8.json  tidybot-table-o20-SortClutteredBlocks.json  tidybot-table-o3.json  tidybot-table-o5.json  tidybot-table-o7.json
prbench/src/prbench/envs/geom2d/: obstruction2d.py
prbench/src/prbench/envs/geom3d/: base_env.py  base_motion3d.py  ground3d.py  motion3d.py  object_types.py  obstruction3d.py  packing3d.py  table3d.py  utils.py
prbench/src/prbench/envs/tidybot/: base_env.py  mujoco_utils.py  object_types.py  objects.py  tidybot3d.py  tidybot_robot_env.py
prbench/src/prbench/envs/tidybot/tasks/: cupboard-o8.json  ground-o3.json  ground-o7.json  table-o3.json  table-o5.json
prbench/tests/envs/dynamic2d/: test_dyn_obstruction2d.py  test_dyn_pushpullstick2d.py  test_dyn_pushtee.py
prbench/tests/envs/dynamic3d/: test_placement_samplers.py  test_tidybot3d_basic.py  test_tidybot3d_cupboard.py  test_tidybot3d_table.py  test_tidybot3d_utils.py  test_tidybot_rewards.py
prbench/tests/envs/geom2d/: test_obstruction2d.py
prbench/tests/envs/geom3d/: test_base_motion3d.py  test_ground3d.py  test_motion3d.py  test_obstruction3d.py  test_packing3d.py  test_table3d.py
prbench/tests/envs/tidybot/: test_tidybot3d_base_motion.py  test_tidybot3d_basic.py  test_tidybot3d_cupboard.py  test_tidybot3d_table.py  test_tidybot3d_utils.py
prpl-tidybot/: pyproject.toml
prpl-tidybot/scripts/: test_arm_ee.py  test_arm_joints.py  test_base.py  test_base_motion_plan.py  test_real2sim.py  test_real2sim_arm.py  test_real2sim_pickplace_ground.py  test_real2sim_pickplace_shelf.py  test_real_interface.py  test_real_interface_arm_act.py  test_real_interface_base_act.py  test_real_interface_base_map_act.py  test_real_interface_obs.py
prpl-tidybot/src/prpl_tidybot/: arm_controller.py  arm_server.py  base_controller.py  base_movement.py  base_server.py  constants.py  coord_converter.py  gamepad_teleop.py  ik_solver.py  kinova.py  real_env.py  structs.py
prpl-tidybot/src/prpl_tidybot/interfaces/: arm_interface.py  base_interface.py  camera_interface.py  interface.py
prpl-tidybot/src/prpl_tidybot/perceivers/: prbench_ground_perceiver.py
prpl-tidybot/tests/: test_real_env.py  test_structs.py
prpl-utils/tests/: test_search.py
pybullet-helpers/: prpl_requirements.txt  pyproject.toml
(+125 files in other folders)
