[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prpl_tidybot"
version = "0.1.0"
description = "Code for interfacing with the real TidyBot++ robot."
readme = "README.md"
requires-python = ">=3.10.14, <3.13"
dependencies = [
   "numpy",
   "threadpoolctl",
   "scipy", 
   "opencv-python", 
   "h5py",
   "mujoco",
   "tqdm", 
   "notebook",
   "matplotlib",
   "pin",
   "ruckig",
   "flask",
   "flask_socketio",
   "pyzmq",
   "redis",
   "phoenix6",
   "pygame",
   "spatialmath-python",
   "kortex-api",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.uv]
override-dependencies = ["protobuf==3.20.0"]

[tool.uv.sources]
kortex-api = {path = "kortex_wheels/kortex_api-2.6.0.post3-py3-none-any.whl"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prpl_tidybot = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = '''
(
    src/prpl_tidybot/base_controller\.py |
    src/prpl_tidybot/base_server\.py |
    src/prpl_tidybot/arm_controller\.py |
    src/prpl_tidybot/arm_server\.py |
    src/prpl_tidybot/kinova\.py |
    src/prpl_tidybot/ik_solver\.py |
    src/prpl_tidybot/constants\.py |
    src/prpl_tidybot/gamepad_teleop\.py
)
'''

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = [
    "venv/*",
    ".venv/*",
    "src/prpl_tidybot/base_controller.py",
    "src/prpl_tidybot/base_server.py",
    "src/prpl_tidybot/arm_controller.py",
    "src/prpl_tidybot/arm_server.py",
    "src/prpl_tidybot/kinova.py",
    "src/prpl_tidybot/ik_solver.py",
    "src/prpl_tidybot/constants.py",
    "src/prpl_tidybot/gamepad_teleop.py"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = [
    "venv/*",
    ".venv/*",
    "src/prpl_tidybot/base_controller.py",
    "src/prpl_tidybot/base_server.py",
    "src/prpl_tidybot/arm_controller.py",
    "src/prpl_tidybot/arm_server.py",
    "src/prpl_tidybot/kinova.py",
    "src/prpl_tidybot/ik_solver.py",
    "src/prpl_tidybot/constants.py",
    "src/prpl_tidybot/gamepad_teleop.py"]

[[tool.mypy.overrides]]
module = [
    "spatialmath.*",
]
ignore_missing_imports = true
